--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,10 +45,10 @@
                 <div class="inline-block mt-3 mr-1">
                   {% include dot.html %}
                 </div>
-                <div class="inline-block mt-3">
+                <div class="inline-block mt-3 mr-1">
                   {% include {{ site.social_link | default: "twitter" }}.html %}
                 </div>
-                <div class="inline-block mt-3">
+                <div class="inline-block mt-3 mr-1">
                   {% include {{ site.professional_link | default: "linkedin" }}.html %}
                 </div>
                 <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ site.descriptionRight }}</p>
