added email link on home page, and accompanying view file in layouts

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,6 +51,9 @@
                 <div class="inline-block mt-3 mr-1">
                   {% include {{ site.professional_link | default: "linkedin" }}.html %}
                 </div>
+                <div class="inline-block mt-3 mr-1">
+                  {% include email.html %}
+                </div>
                 <p class="h4 lh-condensed font-smoothing mt-2 py-1">{{ site.descriptionRight }}</p>
             </div>
           </div>
